<resources>
    <string name="AppFix_empty_list">Desinfektion erfolgreich ausgeführt.</string>
    <string name="accman_pre_bt_ok">Weiter</string>
    <string name="accman_pre_radio_activate">Registrieren</string>
    <string name="accman_pre_radio_activate_long">Ich bin Neukunde und möchte mich am G DATA Update-Server anmelden.</string>
    <string name="accman_pre_radio_enter">Zugangsdaten eingeben</string>
    <string name="accman_pre_radio_enter_long">Ich möchte mich mit meinem G DATA Benutzernamen und Passwort einloggen.</string>
    <string name="accman_pre_txt_choose">Um Ihren Update-Zugang freizuschalten, geben Sie Ihre Zugangsdaten (Benutzername und Passwort) zum G DATA Update-Server ein. Wenn Sie noch keine Zugangsdaten besitzen, registrieren Sie sich bitte am G DATA Update-Server mit Ihrer Registriernummer.</string>
    <string name="accman_pre_txt_subtitle" />
    <string name="accman_pre_txt_title">Updates freischalten</string>
    <string name="app_name">Internet Security</string>
    <string name="choose_scan_freq_summary">Legt fest wie häufig das Gerät überprüft wird (in Tagen).</string>
    <string name="choose_scan_freq_title">Häufigkeit</string>
    <string name="choose_update_region_summary">Wählen Sie den nächstgelegenen Update-Server.</string>
    <string name="choose_update_region_title">Server-Region</string>
    <string name="choose_update_summary">Legt fest wie häufig nach Updates gesucht werden soll (in Tagen).</string>
    <string name="choose_update_title">Häufigkeit</string>
    <string name="clear_arp_exceptions_summary">Ausnahmen für WiFi Schutz und erweiterter WiFi Analyse löschen</string>
    <string name="clear_arp_exceptions_title">Ausnahmen löschen</string>
    <string name="configWindow_Summary" />
    <string name="configWindow_title">Einstellungen</string>
    <string name="dialog_periodic_scan_type_title">Art der Virenprüfung</string>
    <string name="dialog_scan_freq_title">Scan-Häufigkeit in Tagen</string>
    <string name="dialog_update_freq_title">Update-Häufigkeit in Tagen</string>
    <string name="dialog_update_region_title">Server-Region</string>
    <string name="enableTimedScan_summary">Das Gerät wird regelmäßig auf Viren überprüft.</string>
    <string name="enableTimedScan_title">Periodisch</string>
    <string name="enableUpdate_summary">Signaturupdates werden regelmäßig im Hintergrund durchgeführt.</string>
    <string name="enableUpdate_title">Automatisch</string>
    <string name="enable_mms_server">Fernadministration gestatten</string>
    <string name="enable_mms_server_summary">Ermöglicht die Fernadministration des Gerätes.</string>
    <string name="enable_web_portal_key">ENABLE_WEB_PORTAL</string>
    <string name="enable_web_portal_summary">G DATA WebPortal nutzen</string>
    <string name="enable_web_portal_title">G DATA Webportal</string>
    <string name="info_txt_cr">© G DATA Software AG</string>
    <string name="info_txt_versioninfo_name">Version</string>
    <string name="kidsbrowser_enabled_summary">Schaltet den Kids Browser ein bzw. aus.</string>
    <string name="kidsbrowser_enabled_title">Kids Browser eingeschaltet</string>
    <string name="kidsguard_airplane_mode_summary">Den Flugmodus aktivieren (nicht auf neueren Geräten)</string>
    <string name="kidsguard_airplane_mode_title">Flugmodus einschalten</string>
    <string name="kidsguard_allow_emergency_calls_summary">Die Telefonie App wird für Notrufnummern freigeschaltet. Andere Rufnummern werden blockiert.</string>
    <string name="kidsguard_allow_emergency_calls_title">Notrufnummern erlauben</string>
    <string name="kidsguard_app_background_preference_summary">Hintergrund der App Icons</string>
    <string name="kidsguard_app_background_preference_title">Hintergrund</string>
    <string name="kidsguard_app_background_size_preference_summary">Größe des App Icon Hintergrundes</string>
    <string name="kidsguard_app_background_size_preference_title">Hintergrundgröße</string>
    <string name="kidsguard_app_grid">Anordnung der Apps</string>
    <string name="kidsguard_app_icon">App Icons</string>
    <string name="kidsguard_app_icon_size_preference_summary">Größe der App Icons</string>
    <string name="kidsguard_app_icon_size_preference_title">Icongröße</string>
    <string name="kidsguard_app_label">App Beschriftung</string>
    <string name="kidsguard_app_label_color_summary">Farbe der App Namen</string>
    <string name="kidsguard_app_label_color_title">Textfarbe</string>
    <string name="kidsguard_app_textsize_summary">Textgröße der App Namen</string>
    <string name="kidsguard_app_textsize_title">Textgröße</string>
    <string name="kidsguard_block_incoming_calls_summary">Eingehende Anrufe werden blockiert. Ausgehende Anrufe sind möglich, solange eine Telefon App freigegeben ist</string>
    <string name="kidsguard_block_incoming_calls_title">Eingehende Anrufe blockieren</string>
    <string name="kidsguard_fix_volume_keys_summary">Die Änderungen der Lautstärketasten werden sofort zurückgenommen.</string>
    <string name="kidsguard_fix_volume_keys_title">Lautstärke fixieren</string>
    <string name="kidsguard_over_control_time_checkbox_summary">Zeitbeschränkung für Gerätenutzung aktivieren</string>
    <string name="kidsguard_over_control_time_checkbox_title">Aktivieren</string>
    <string name="kidsguard_parents_options">Optionen für die Kinderecke</string>
    <string name="kidsguard_raster_preference_landscape_columns_summary">Anzahl der Iconreihen im Querformat</string>
    <string name="kidsguard_raster_preference_landscape_columns_title">Reihen im Querformat</string>
    <string name="kidsguard_raster_preference_landscape_rows_summary">Anzahl der Iconspalten im Querformat</string>
    <string name="kidsguard_raster_preference_landscape_rows_title">Spalten im Querformat</string>
    <string name="kidsguard_raster_preference_portrait_columns_summary">Anzahl der Iconreihen im Hochformat</string>
    <string name="kidsguard_raster_preference_portrait_columns_title">Reihen im Hochformat</string>
    <string name="kidsguard_raster_preference_portrait_rows_summary">Anzahl der Iconspalten im Hochformat</string>
    <string name="kidsguard_raster_preference_portrait_rows_title">Spalten im Hochformat</string>
    <string name="kidsguard_reset_time_limit_summary">Zeitbeschränkung der Gerätenutzung zurücksetzen und Schlaf-Modus deaktivieren</string>
    <string name="kidsguard_reset_time_limit_title">Zeitbeschränkung zurücksetzen</string>
    <string name="kidsguard_reset_usage_time_summary">Bisher genutzte Zeit des Geräts zurücksetzen</string>
    <string name="kidsguard_reset_usage_time_title">Bisher genutzte Zeit zurücksetzen</string>
    <string name="kidsguard_set_allowed_usage_time_header">Zeitbeschränkung für Gerätenutzung</string>
    <string name="kidsguard_set_allowed_usage_time_summary">Zeitbeschränkung für Gerätenutzung einstellen</string>
    <string name="kidsguard_set_allowed_usage_time_summary_minutes_plural">Minuten</string>
    <string name="kidsguard_set_allowed_usage_time_title">Zeitbeschränkung einstellen</string>
    <string name="kidsguard_usage_control__checkbox_summary">Das Gerät kann nur noch im dem von Ihnen gewählten Ort und Umkreis genutzt werden.</string>
    <string name="kidsguard_usage_control__checkbox_title">Aktivieren</string>
    <string name="kidsguard_usage_control_amoutoftime_category">Zeitliche Begrenzung</string>
    <string name="kidsguard_usage_control_location_category">Örtliche Beschränkung</string>
    <string name="kidsguard_usage_control_no_adress">Keine Adresse eingetragen</string>
    <string name="kidsguard_usage_control_radius_title">Umkreis in Kilometer festlegen</string>
    <string name="kidsguard_usage_control_scheduled_category">Wöchentliche Planung</string>
    <string name="kidsguard_usage_control_scheduled_summary">Setzen Sie für jeden Wochentag einen Zeitraum in der die Nutzung des Geräts zugelassen ist</string>
    <string name="kidsguard_usage_control_scheduled_title">Planen</string>
    <string name="kidsguard_usage_control_set_adress">Adresse eintragen</string>
    <string name="kidsguard_usage_control_weekly_category">Wochenübersicht</string>
    <string name="kidsguard_wifi_off_summary">Alle Netzwerke trennen und WiFi deaktivieren</string>
    <string name="kidsguard_wifi_off_title">WiFi ausschalten</string>
    <string name="mms_server_address">Serveradresse</string>
    <string name="mms_server_address_summary">Die Adresse des ManagementServers (IP/Servername)</string>
    <string name="mms_server_name">Gerätename</string>
    <string name="mms_server_name_summary">Gerätename zur Identifikation.</string>
    <string name="mms_server_password">Passwort</string>
    <string name="mms_server_password_summary">Passwort zur Autorisierung.</string>
    <string name="periodic_scan_type_summary">Legt fest ob eine Schnellprüfung der installierten Anwendungen oder ein kompletter Systemscan durchgeführt wird.</string>
    <string name="periodic_scan_type_title">Art</string>
    <string name="pref_category_account">Zugangsdaten &amp; Abonnements</string>
    <string name="pref_category_account_summary">Zugangsdaten verwalten</string>
    <string name="pref_category_default">Allgemein</string>
    <string name="pref_category_licenses">Software Lizenzen</string>
    <string name="pref_category_mms">Fernadministration</string>
    <string name="pref_category_scan">Virenprüfung</string>
    <string name="pref_category_scan_header">Virenprüfung</string>
    <string name="pref_category_scan_summary">Einstellungen für die automatische Prüfung.</string>
    <string name="pref_category_timedUpdate">Updates</string>
    <string name="pref_category_webportal">WebPortal</string>
    <string name="pref_category_webshield">Web-Schutz</string>
    <string name="pref_licenses">Open-Source-Lizenzen</string>
    <string name="pref_licenses_summary">Lizenzdetails für Open-Source-Software anzeigen</string>
    <string name="scanOnInstall_summary">Neu installierte Anwendungen automatisch prüfen.</string>
    <string name="scanOnInstall_title">Bei App-Installation</string>
    <string name="scan_power_connected_summary">Der Hintergrundscan wird nur ausgeführt, wenn das Gerät geladen wird.</string>
    <string name="scan_power_connected_title">Nur im Ladevorgang</string>
    <string name="scan_skip_power_low_summary">Der Hintergrundscan wird nicht ausgeführt, falls der Akku fast leer ist</string>
    <string name="scan_skip_power_low_title">Akkusparmodus</string>
    <string name="showTrayIcon_title">Benachrichtigungssymbol</string>
    <string name="showTrayIcons_summary">Zeigt das ##app_name## Logo in der Benachrichtigungsleiste an.</string>
    <string name="spoof_detection_activated_summary">Einträge der ARP-Tabelle überwachen</string>
    <string name="spoof_detection_activated_title">WiFi Schutz</string>
    <string name="spoof_detection_advanced_summary">Zusätzliche Überprüfungen und Regeln</string>
    <string name="spoof_detection_advanced_title">Erweiterte Einstellungen</string>
    <string name="spoof_detection_networks_summary">In diesen WLAN Netzwerken wird die Überwachung der ARP-Tabelle deaktiviert</string>
    <string name="spoof_detection_networks_title">Vertrauensvolle Netzwerke</string>
    <string name="updateWifiOnly_summary">Updates nur bei vorhandener WLAN-Verbindung durchführen.</string>
    <string name="updateWifiOnly_title">Nur über WLAN</string>
    <string name="web_portal_interval_key">WEB_PORTAL_INTERVAL</string>
    <string name="web_portal_machinename_key">WEB_PORTAL_MACHINENAME</string>
    <string name="web_portal_scan_interval">WebPortal Update Interval</string>
    <string name="web_portal_scan_interval_summary">Zeit intervall zwischen zwei Synchronisationen</string>
    <string name="webshield_only_wlan_summary">Webseiten nur bei vorhandener WLAN-Verbindung überprüfen.</string>
    <string name="webshield_only_wlan_title">Nur über WLAN</string>
</resources>